--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deployment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "server": "nodemon app.js"
   },
